# libelas

./: CMakeLists.txt
src/: elas.cpp  elas.h  image.h  main.cpp
